--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <div id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
+    <div id="img-div">
+      <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Cat_poster_1.jpg" alt="cat" height=" 500px" width=" 500px">
+    </div>
   </div>
 
   <!--
