added the anchor tag with id of tribute-link and resized the image

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   <div id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
     <div id="img-div">
-      <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="cat" height=" 500px" width=" 500px">
+      <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="cat" height="auto" max-width="100%">
       <p id="img-caption">This is a picture of a cat</p>
     </div>
     <div id="tribute-info">
       <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
     </div>
+    <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="blank"></a>
   </div>
+  
 
   <!--
 =======
