--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <div id="main">
+  <div id="main" style= "max-width:100%; margin: 0 auto; display: block;">
     <h1 id="title">Dr. Norman Borlaug</h1>
     <div id="img-div">
-      <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="cat" height="auto" max-width="100%">
-      <p id="img-caption">This is a picture of a cat</p>
+      <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" 
+      alt="cat" height="auto"  style= "max-width:100%; margin: 0 auto; display: block;">
+      <p id="img-caption">The man who saved a billion lives</p>
     </div>
     <div id="tribute-info">
       <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
     </div>
-    <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="blank"></a>
+    <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank">External link to tribute</a>
   </div>
   
 
